kubernetes/staging/app-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: gsx-backend-service
  namespace: staging
spec:
  selector:
    app: gsx-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
