kubernetes/staging/net-allow-devs-only.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-devs-only
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: nginx-gsx # Entry only from DMZ
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.100.0/24 # Only Devs
      ports:
        - protocol: TCP
          port: 8080
