kubernetes/staging/net-allow-nginx-to-node.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-node
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: gsx-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx-gsx
      ports:
        - protocol: TCP
          port: 3000
