kubernetes/staging/net-allow-node-to-redis.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-to-redis
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gsx-app # Only possible access
      ports:
        - protocol: TCP
          port: 6379
