kubernetes/staging/net-block-stage-to-prod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-stage-to-prod
  namespace: staging
spec:
  podSelector: {} # All pods
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0 # Allow to exit anywhere
            except:
              - 10.0.3.0/24 # Block Production
